remove some small warnnings from code